--- a/notebooks/preprocessing.ipynb
+++ b/notebooks/preprocessing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
     "\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.stem import SnowballStemmer\n",
+    "from nltk.stem import WordNetLemmatizer\n",
     "import re\n",
     "\n",
     "from functools import lru_cache\n",
@@ -23,16 +23,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MORPH = SnowballStemmer('english')"
+    "MORPH = WordNetLemmatizer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +108,7 @@
        "4  mature intelligent and highly charged melodram...      10"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
        "4  When I first got wind of this picture, it was ...       9"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,24 +206,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "@lru_cache(maxsize=100000)\n",
     "def get_normal_form (i):\n",
-    "    return MORPH.stem(i.lower())\n",
+    "    return MORPH.lemmatize(i.lower())\n",
     "\n",
     "def normalize_text(text):\n",
-    "    normalized = [get_normal_form(word) for word in re.findall(r'[a-zA-Z]{3,}', text)]\n",
-    "    return ' '.join([word for word in normalized if word not in stop_words])\n",
+    "    del_stopwords = [word for word in re.findall(r'[a-zA-Z]{3,}', text) if word not in stop_words]\n",
+    "    normalized = [get_normal_form(word) for word in del_stopwords]\n",
+    "    return ' '.join(normalized)\n",
     "\n",
     "stop_words = set(stopwords.words('english')) "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -237,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -271,7 +272,7 @@
        "      <th>0</th>\n",
        "      <td>Dog days is one of most accurate films i've ev...</td>\n",
        "      <td>10</td>\n",
-       "      <td>dog day one accur film ever seen describ life ...</td>\n",
+       "      <td>dog day one accurate film ever seen describing...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -283,19 +284,19 @@
        "      <th>2</th>\n",
        "      <td>After watching the Next Action Star reality TV...</td>\n",
        "      <td>7</td>\n",
-       "      <td>watch next action star realiti seri pleas see ...</td>\n",
+       "      <td>after watching next action star reality series...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>Considering the lack of art with in African ci...</td>\n",
        "      <td>10</td>\n",
-       "      <td>consid lack art african cinema black american ...</td>\n",
+       "      <td>considering lack art african cinema black amer...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>mature intelligent and highly charged melodram...</td>\n",
        "      <td>10</td>\n",
-       "      <td>matur intellig high charg melodrama unbelivebl...</td>\n",
+       "      <td>mature intelligent highly charged melodrama un...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -310,14 +311,14 @@
        "4  mature intelligent and highly charged melodram...      10   \n",
        "\n",
        "                                        review_parse  \n",
-       "0  dog day one accur film ever seen describ life ...  \n",
+       "0  dog day one accurate film ever seen describing...  \n",
        "1  hollywood west trail hand rough bunch came tow...  \n",
-       "2  watch next action star realiti seri pleas see ...  \n",
-       "3  consid lack art african cinema black american ...  \n",
-       "4  matur intellig high charg melodrama unbelivebl...  "
+       "2  after watching next action star reality series...  \n",
+       "3  considering lack art african cinema black amer...  \n",
+       "4  mature intelligent highly charged melodrama un...  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -362,31 +363,31 @@
        "      <th>0</th>\n",
        "      <td>This is fantastic! Everything from the Score -...</td>\n",
        "      <td>10</td>\n",
-       "      <td>fantast everyth score final credit role movi m...</td>\n",
+       "      <td>this fantastic everything score final credit r...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>This movie was amazing!!!! From beginning to e...</td>\n",
        "      <td>10</td>\n",
-       "      <td>movi amaz begin end movi pack fun laugh music ...</td>\n",
+       "      <td>this movie amazing from beginning end movie pa...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>The first time I've seen this DVD, I was not o...</td>\n",
        "      <td>10</td>\n",
-       "      <td>first time seen dvd onli happi becaus fact fir...</td>\n",
+       "      <td>the first time seen dvd happy fact first time ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>One of the flat-out drollest movies of all-tim...</td>\n",
        "      <td>10</td>\n",
-       "      <td>one flat drollest movi time sim rutherford bes...</td>\n",
+       "      <td>one flat drollest movie time sim rutherford be...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>When I first got wind of this picture, it was ...</td>\n",
        "      <td>9</td>\n",
-       "      <td>first got wind pictur call shepherd suppos fil...</td>\n",
+       "      <td>when first got wind picture called shepherd su...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -401,14 +402,14 @@
        "4  When I first got wind of this picture, it was ...       9   \n",
        "\n",
        "                                        review_parse  \n",
-       "0  fantast everyth score final credit role movi m...  \n",
-       "1  movi amaz begin end movi pack fun laugh music ...  \n",
-       "2  first time seen dvd onli happi becaus fact fir...  \n",
-       "3  one flat drollest movi time sim rutherford bes...  \n",
-       "4  first got wind pictur call shepherd suppos fil...  "
+       "0  this fantastic everything score final credit r...  \n",
+       "1  this movie amazing from beginning end movie pa...  \n",
+       "2  the first time seen dvd happy fact first time ...  \n",
+       "3  one flat drollest movie time sim rutherford be...  \n",
+       "4  when first got wind picture called shepherd su...  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -419,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
